# ratatoskr

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_AUDIT.md  DESIGN.md  Makefile  QUALITY_BASELINE.md  README.md  bot.py  osv-scanner.toml  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  security-audit-report.md
.claude/: settings.json
.claude/commands/: ponytail.md
.claude/hooks/: post-tool-use.py  pre-tool-use.py  session-start.sh  user-prompt-submit.py
.codex/: hooks.json
.codex/commands/: README.md  ponytail-audit.md  ponytail-debt.md  ponytail-review.md  ponytail.md
.codex/hooks/: post-tool-use.py  pre-tool-use.py  session-start.sh  user-prompt-submit.py
.codex/plugins/: README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: disaster-recovery-drill.md  rotate-secrets-quarterly.md
.github/workflows/: benchmarks.yml  ci.yml  dependency-review.yml  regenerate-lockfiles.yml  release.yml  skills-sync.yml  update-locks.yml
app/adapter_models/: batch_processing.py
app/adapters/: telegram_source_helpers.py  telethon_compat.py
app/agents/: base_agent.py  combined_summary_agent.py  content_extraction_agent.py  llm_call_persistence.py  multi_source_aggregation_agent.py  multi_source_extraction_agent.py  relationship_analysis_agent.py  repo_analysis_agent.py  validation_agent.py  web_search_agent.py
app/api/: aggregation_provenance.py  background_processor.py  background_tasks.py  email_errors.py  error_handlers.py  exceptions.py  main.py  metrics_auth.py  middleware.py  search_helpers.py
app/cli/: _runtime.py  ai_backup.py  api_server.py  backfill_repository_embeddings.py  backfill_vector_store.py  mcp_server.py  migrate_db.py  reconcile_vector_index.py  repository.py  requeue_failed_task.py  retry.py  rotate_github_tokens.py  seed_demo_data.py  summary.py  taskiq_worker.py  verify_ai_backup.py
app/config/: __init__.py  _secret_marker.py  academic.py  ai_backup.py  api.py  background.py  backup.py  config_file.py  config_holder.py  credential_catalog.py  credential_reloader.py  database.py  deployment.py  email.py  fieldtheory.py  firecrawl.py  git_backup.py  github.py  integrations.py  known_client_ids.py  langgraph.py  llm.py  media.py  models_file.py  otel.py  redis.py  retention.py  rss.py  runtime.py  scraper.py  settings.py  signal_ingestion.py  social.py  telegram.py  transcription.py  tts.py  twitter.py  worker_capacity.py  x_bookmarks.py
app/core/: content_classifier.py  content_cleaner.py  embedding_space.py  escalation_policy.py  git_url_safety.py  json_utils.py  llm_call_budget.py  llm_usage_budget.py  logging_utils.py  substack_utils.py  summary_contract.py  summary_embedding_text.py  summary_normalization.py  summary_schema.py  telethon_session.py  time_utils.py  ui_strings.py  url_utils.py  uuid_utils.py
app/db/: alembic_runner.py  api_runtime_holder.py  base.py  json_utils.py  runtime_database.py  session.py  user_interactions.py
app/di/: api.py  api_runtime_holder.py  application.py  database.py  extraction.py  graphs.py  mcp.py  platform_extractors.py  repositories.py  retrieval.py  search.py  shared.py  social.py  tasks.py  telegram.py  telegram_commands.py  types.py
app/mcp/: aggregation_service.py  archive_research_service.py  article_service.py  catalog_service.py  context.py  fieldtheory_search_service.py  helpers.py  http_auth.py  resource_registrations.py  semantic_service.py  server.py  signal_service.py  tool_registrations.py  x_search_service.py
app/observability/: _metrics_base.py  attributes.py  failure_observability.py  metrics.py  metrics_aggregation.py  metrics_auth.py  metrics_backup.py  metrics_cache.py  metrics_circuit_breaker.py  metrics_db.py  metrics_digest.py  metrics_email.py  metrics_http.py  metrics_http_requests.py  metrics_llm.py  metrics_mcp.py  metrics_repositories.py  metrics_request.py  metrics_scheduler.py  metrics_scraper.py  metrics_social.py  metrics_status.py  metrics_streaming.py  metrics_stt.py  metrics_taskiq.py  metrics_tts.py  metrics_twitter.py  metrics_vector.py  metrics_web_search.py  otel.py
app/prompts/: custom_digest_synthesis_system_en.txt  custom_digest_synthesis_system_ru.txt  fieldtheory_possible_help_en.txt  fieldtheory_possible_help_ru.txt  file_cache.py  manager.py  summary_system_en.txt  summary_system_en_instructor.txt  summary_system_ru.txt  summary_system_ru_instructor.txt  x_possible_help_en.txt  x_possible_help_ru.txt
app/security/: rate_limiter.py  secret_crypto.py  ssrf.py  token_crypto.py
app/tasks/: ai_backup_sync.py  broker.py  deps.py  digest.py  (+15 more)
config/: ratatoskr.yaml  ratatoskr.yaml.example
docs/: README.md  SPEC.md  cocoindex.md  refactor-roadmap.md  vector-index-sync.md
extension/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
tests/: _config_env.py  conftest.py  db_helpers_async.py  telegram_bot_builders.py  test_academic_platform_extractor.py  test_access_control.py  test_allowlist_unification.py  test_api_database_dependency.py  test_api_rate_limit_and_sync.py  test_api_request_models.py  test_api_security.py  test_backup_hardening.py  test_backup_service.py  test_backup_streaming_crypto.py  test_batch_processing.py  test_bot_checkpointer_lifecycle_wiring.py  test_bot_shutdown.py  test_callback_action_store.py  test_callback_actions.py  test_ci_workflow_excludes.py  test_combined_summary_agent_persistence.py  test_command_dispatcher.py  test_command_errors.py  test_command_handlers.py  test_commands.py  test_config_hot_reload.py  test_content_cleaner_boilerplate.py  test_content_quality.py  test_content_truncation.py  test_dedupe.py  test_embedding_service_async_load.py  test_embedding_space.py  test_forward_handling.py  test_forward_processor_background_tasks.py  test_forward_routing.py  test_forward_summarizer.py  test_git_url_safety.py  test_interactive_summary_service.py  test_interrupted_synchronous_request_recovery.py  test_io_db_separation.py  (+85 more)
tools/: check_readme_facts.py  count_api_endpoints.py
(+1343 files in other folders)
