[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
force_grid_wrap = 0
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["app", "tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".git", "data", "build", "dist", "venv"]

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "UP",    # pyupgrade
  "ASYNC", # async issues
  "N",     # pep8-naming
  "B",     # flake8-bugbear (B006: mutable-argument-default, B023: function-uses-loop-variable — must stay enabled)
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "T10",   # flake8-debugger
  "EXE",   # flake8-executable
  "ISC",   # flake8-implicit-str-concat
  "PIE",   # flake8-pie
  "PT",    # flake8-pytest-style
  "RET",   # flake8-return
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "TCH",   # flake8-type-checking
  "ERA",   # eradicate (commented code)
  "PL",    # pylint
  "RUF",   # ruff-specific rules
]
ignore = [
  "E501",    # line length handled by formatter
  "PLR0913", # too many arguments
  "PLR2004", # magic value comparison
  "PLR0911", # too many return statements
  "PLR0912", # too many branches
  "PLR0915", # too many statements
  "UP046",   # prefer PEP695 type params - project allows Generic/TypeVar style
  "UP047",   # prefer PEP695 type params - project allows Generic/TypeVar style
  "BLE001",  # blind exception catch - intentional for resilience in many cases
  "FBT001",  # boolean positional arg - acceptable in many contexts
  "FBT002",  # boolean default value - acceptable in many contexts
  "FBT003",  # boolean positional value - acceptable in many contexts
  "TRY300",  # consider else block - style preference
  "S110",    # try-except-pass - sometimes appropriate for optional features
  "PLC0415", # import outside top-level - needed for circular dependencies
  "SLF001",  # private member access - sometimes necessary
  "ERA001",  # commented code - may be kept for documentation
  "RUF001",  # ambiguous unicode - false positives in Russian text
  "DTZ003",  # datetime without timezone - not always needed
  "DTZ005",  # datetime.now without tz - not always needed
  "SIM102",  # nested if - style preference, sometimes clearer
  "SIM105",  # use contextlib.suppress - style preference
  "PLW2901", # loop variable overwritten - sometimes intentional
  "RUF012",  # mutable class attributes - acceptable in many cases
  "RUF009",  # function call in dataclass defaults - safe for Logger objects
  "N818",    # exception naming - DDD naming convention
  "ASYNC109", # async timeout parameter - trio-specific, not relevant
  "B008",    # function call in argument defaults - standard FastAPI pattern
  "PLW0603", # global statement - needed for asyncio semaphore initialization
  "SIM103",  # return condition directly - sometimes if/return is clearer
  "ASYNC240", # async os.path/pathlib - not applicable, we use asyncio not trio/anyio
  "PLW0108", # lambda may be unnecessary - false positive for factory patterns
]

# Per-file ignores for test files
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",    # assert used - normal in tests
  "PLR2004", # magic values - acceptable in tests
  "SLF001",  # private member access - sometimes needed in tests
  "ARG001",  # unused function arguments - test fixtures
  "ARG002",  # unused method arguments - test methods
  "PLR0913", # too many arguments - test setup
  "C901",    # complex functions - test scenarios
  "PTH118",  # os.path.join - legacy test code
  "PT011",   # pytest.raises too broad - can be improved later
  "PT009",   # unittest assertions - can be migrated later
  "PT027",   # unittest-style assertRaises - using unittest.TestCase
  "PT018",   # compound assertions - acceptable for brevity in tests
  "TC001",   # app imports for type annotations - needed at runtime for fixtures/markers
  "TC002",   # third-party imports for type annotations - needed at runtime for pytest markers
  "TC003",   # stdlib imports for type annotations - needed at runtime in test contexts
  "N814",    # camelCase as constant alias - test doubles use arbitrary names
  "N817",    # CamelCase as acronym alias - test doubles use arbitrary names
  "UP042",   # StrEnum compatibility shim for Python 3.10
  "UP017",   # datetime.UTC compatibility shim for Python 3.10
  "PT012",   # pytest.raises complex statements - acceptable in integration tests
  "DTZ001",  # datetime() without tz - testing naive datetime handling
  "DTZ005",  # datetime.now without tz - acceptable in tests
  "E402",    # module level import not at top - needed for mocking before imports
  "N806",    # non-lowercase variable in function - mock objects use PascalCase
  "F841",    # unused variable - mock setup
  "SIM117",  # nested with statements - clearer in test setup
]
"test_*.py" = [
  "EXE001",  # shebang present - test files in root
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = false
disallow_untyped_defs = false
disallow_any_generics = false
exclude = ["data", "build", "dist", "venv", "ratatoskr", "\\.claude"]
# Fix for _thread.RLock internal error
plugins = ["sqlalchemy.ext.mypy.plugin"]
strict_optional = false

[[tool.mypy.overrides]]
module = ["app.core.*", "app.domain.*", "app.models.*"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["app.api.*", "app.infrastructure.*", "app.security.*", "app.config.*"]
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["tests.test_telegram_retry_command"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.observability.test_taskiq_propagation"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["app.infrastructure.search.reranking_service"]
warn_unused_ignores = false

[project]
name = "ratatoskr"
version = "0.1.0"
description = "Telegram bot that summarizes URLs and forwarded posts via Firecrawl + OpenRouter"
requires-python = ">=3.13"
# Core dependencies: Telegram bot, HTTP, database, NLP, logging
dependencies = [
  "httpx[http2]>=0.28.1",
  "telethon>=1.42.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "pyyaml>=6.0.3",
  "scrapling>=0.4.8",
  "browserforge>=1.2.4",
  "curl_cffi>=0.15.0",
  "trafilatura>=2.0.0",
  "spacy>=3.8.11,<4",
  "json-repair>=0.59.7",
  "tenacity>=8.2.0",
  "openai>=2.36.0",
  "instructor>=1.5.0",
  "loguru>=0.7.3",
  "orjson>=3.11.9",
  "uvloop>=0.22.1",
  "redis>=7.1.0",
  "alembic>=1.13.0",
  "sqlalchemy[asyncio]>=2.0.30,<3.0",
  "asyncpg>=0.29",
  "greenlet>=3.0",
]

[project.optional-dependencies]
# Attachment processing: image handling + PDF extraction + office documents
attachment = [
  "Pillow>=11.0.0",
  "pymupdf>=1.27.2.3",
  "markitdown[docx,pptx,xlsx,outlook]>=0.0.2",
]

# Browser-based scraper fallback providers (Playwright + Crawlee)
# patchright is Scrapling's stealth Playwright backend (DynamicFetcher /
# StealthyFetcher); Scrapling lazy-imports it, so without this dep the
# stealth path fails with `ModuleNotFoundError: No module named 'patchright'`
# and the chain loses its anti-bot fallback on JS-heavy / Cloudflare sites.
browser_scraper = [
  "playwright>=1.40",
  "patchright>=1.40",
  "crawlee[beautifulsoup,playwright]>=1.4.0",
]

# LLM-driven last-resort scraper (lazy-imported; only fires when all other providers fail)
scraper_ai = [
  "scrapegraphai>=2.1.1",
]

# Shared inference stack used by both api (semantic search) and ml (training/backfill)
inference_core = [
  "qdrant-client>=1.12.0",
  "sentence-transformers>=5.2.2",  # semantic embedding generation
]

# Mobile REST API dependencies (FastAPI, JWT auth, vector search client)
api = [
  "ratatoskr[inference_core]",
  "ratatoskr[browser_scraper]",
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.40.0",
  "starlette>=0.50.0",
  "sse-starlette>=3.4.1",
  "pyjwt>=2.12.0",
  "cryptography>=48.0.0",
  "python-multipart>=0.0.28",
  "defusedxml>=0.7.1",
  "argon2-cffi>=23.1.0",
]

# Machine learning dependencies (embeddings, vector search, transformers)
ml = [
  "ratatoskr[inference_core]",
  "torch>=2.10.0",
  "transformers>=5.8.0",
  "scikit-learn>=1.8.0",
]

# YouTube video download and transcript extraction
youtube = [
  "yt-dlp>=2026.3.17",
  "youtube-transcript-api>=1.2.4",
]

# Twitter/X extraction (uses base runtime dependencies)
twitter = []

# PDF export functionality
export = [
  "weasyprint>=68.0",
]

# Background task scheduling
scheduler = [
  "taskiq>=0.12.4,<0.13.0",
  "taskiq-redis>=1.0.0,<2.0.0",
]

# Gemini embedding provider (google-genai SDK)
gemini = [
  "google-genai>=1.0.0",
]

# Push notifications (Firebase Cloud Messaging / APNS)
push = [
  "firebase-admin>=7.4.0",
]

# Monitoring and observability
monitoring = [
  "prometheus_client>=0.25.0",
  "sentry-sdk[fastapi,loguru]>=2.0.0",
]

# MCP (Model Context Protocol) server for AI agent integrations
mcp = [
  "mcp>=1.27.1,<2",
]

# LangChain/LangGraph agent orchestration with Postgres checkpointing
langgraph = [
  "langchain>=1.0,<2",
  "langgraph>=1.1.10",
  "langgraph-checkpoint-postgres>=3.0.0",
  "psycopg[binary]>=3.0",
]

# CocoIndex incremental ETL: live sync from Postgres summaries to Qdrant
cocoindex = [
  "cocoindex>=1.0.3,<1.1",
  "psycopg[binary]>=3.0",
]

# OpenTelemetry distributed tracing (Tempo backend)
otel = [
  "opentelemetry-api>=1.41,<2",
  "opentelemetry-sdk>=1.41,<2",
  "opentelemetry-exporter-otlp-proto-grpc>=1.41,<2",
  "opentelemetry-instrumentation-fastapi>=0.62b0",
  "opentelemetry-instrumentation-httpx>=0.62b0",
  "opentelemetry-instrumentation-redis>=0.62b0",
  "opentelemetry-instrumentation-logging>=0.62b0",
]


# NOTE: spaCy trained models (en_core_web_sm, ru_core_news_sm) were removed because
# the codebase only uses spacy.blank() + sentencizer, which needs no trained models.
# Install them manually via `python -m spacy download <model>` if ever needed.

[dependency-groups]
dev = [
    "bandit>=1.7.9",
    "fakeredis>=2.33.0",
    "hypothesis>=6.152.5",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "openapi-spec-validator>=0.7.2",
    "pip-audit>=2.7.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.14",
    # app.tasks.* (digest scheduler etc.) imports taskiq unconditionally; the
    # `scheduler` extra is required to import those modules. Pulling the same
    # pins into dev so unit/integration tests under tests/tasks/, tests/observability/,
    # and tests/integration/test_channel_digest_scheduler.py collect on a
    # fresh `uv sync` without needing `--extra scheduler`.
    "taskiq>=0.12.4,<0.13.0",
    "taskiq-redis>=1.0.0,<2.0.0",
]

[tool.uv]
# Constrain torch's CUDA satellite deps to x86_64 Linux only.
#
# The torch 2.11.0 lockfile entry pins nvidia-* / triton / cuda-bindings /
# cuda-toolkit under marker `sys_platform == 'linux'` with no platform_machine
# qualifier, which makes uv attempt to install them on linux/arm64 too. The
# Pi (aarch64) has no NVIDIA GPU and the aarch64 torch wheel is CPU-only,
# so these are pure download bloat (~1.2 GB) and slow ARM image builds by
# 5-10 min. The overrides below mirror torch's marker but add
# `platform_machine == 'x86_64'`, so on aarch64 they evaluate False and uv
# skips the wheels entirely.
override-dependencies = [
  "protobuf>=7.34.1",
  "cuda-bindings; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "cuda-toolkit; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cublas; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cuda-cupti; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cuda-nvrtc; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cuda-runtime; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cudnn-cu13; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cufft; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-curand; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cusolver; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cusparse; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cusparselt-cu13; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-nccl-cu13; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-nvjitlink; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-nvshmem-cu13; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "triton; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "safety"
url = "https://pkgs.safetycli.com/repository/po4yka/project/ratatoskr/pypi/simple/"
default = false
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests that rely on pytest-asyncio",
    "chaos: marks chaos/fault-injection tests",
    "stress: marks stress/load tests",
    "benchmark: marks performance benchmark tests",
    "contracts: marks API and schema contract consistency tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/build/*",
    "*/dist/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
# Enforced floor. Measured baseline: ~15 % from the API test subset; the full
# CI run (all non-integration tests, all deps installed) lands higher.
# Target: 80 %. Raise this value in a dedicated commit whenever a test
# expansion sprint pushes the real number up — never lower it.
fail_under = 15
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
