[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
force_grid_wrap = 0
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["app", "tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".git", "data", "build", "dist", "venv"]

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "UP",    # pyupgrade
  "ASYNC", # async issues
  "N",     # pep8-naming
  "B",     # flake8-bugbear (B006: mutable-argument-default, B023: function-uses-loop-variable — must stay enabled)
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "T10",   # flake8-debugger
  "EXE",   # flake8-executable
  "ISC",   # flake8-implicit-str-concat
  "PIE",   # flake8-pie
  "PT",    # flake8-pytest-style
  "RET",   # flake8-return
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "TCH",   # flake8-type-checking
  "ERA",   # eradicate (commented code)
  "PL",    # pylint
  "RUF",   # ruff-specific rules
]
ignore = [
  "E501",    # line length handled by formatter
  "PLR0913", # too many arguments
  "PLR2004", # magic value comparison
  "PLR0911", # too many return statements
  "PLR0912", # too many branches
  "PLR0915", # too many statements
  "UP046",   # prefer PEP695 type params - project allows Generic/TypeVar style
  "UP047",   # prefer PEP695 type params - project allows Generic/TypeVar style
  "BLE001",  # blind exception catch - intentional for resilience in many cases
  "FBT001",  # boolean positional arg - acceptable in many contexts
  "FBT002",  # boolean default value - acceptable in many contexts
  "FBT003",  # boolean positional value - acceptable in many contexts
  "TRY300",  # consider else block - style preference
  "S110",    # try-except-pass - sometimes appropriate for optional features
  "PLC0415", # import outside top-level - needed for circular dependencies
  "SLF001",  # private member access - sometimes necessary
  "ERA001",  # commented code - may be kept for documentation
  "RUF001",  # ambiguous unicode - false positives in Russian text
  "DTZ003",  # datetime without timezone - not always needed
  "DTZ005",  # datetime.now without tz - not always needed
  "SIM102",  # nested if - style preference, sometimes clearer
  "SIM105",  # use contextlib.suppress - style preference
  "PLW2901", # loop variable overwritten - sometimes intentional
  "RUF012",  # mutable class attributes - acceptable in many cases
  "RUF009",  # function call in dataclass defaults - safe for Logger objects
  "N818",    # exception naming - DDD naming convention
  "ASYNC109", # async timeout parameter - trio-specific, not relevant
  "B008",    # function call in argument defaults - standard FastAPI pattern
  "PLW0603", # global statement - needed for asyncio semaphore initialization
  "SIM103",  # return condition directly - sometimes if/return is clearer
  "ASYNC240", # async os.path/pathlib - not applicable, we use asyncio not trio/anyio
  "PLW0108", # lambda may be unnecessary - false positive for factory patterns
]

# Per-file ignores for test files
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",    # assert used - normal in tests
  "PLR2004", # magic values - acceptable in tests
  "SLF001",  # private member access - sometimes needed in tests
  "ARG001",  # unused function arguments - test fixtures
  "ARG002",  # unused method arguments - test methods
  "PLR0913", # too many arguments - test setup
  "C901",    # complex functions - test scenarios
  "PTH118",  # os.path.join - legacy test code
  "PT011",   # pytest.raises too broad - can be improved later
  "PT009",   # unittest assertions - can be migrated later
  "PT027",   # unittest-style assertRaises - using unittest.TestCase
  "PT018",   # compound assertions - acceptable for brevity in tests
  "TC001",   # app imports for type annotations - needed at runtime for fixtures/markers
  "TC002",   # third-party imports for type annotations - needed at runtime for pytest markers
  "TC003",   # stdlib imports for type annotations - needed at runtime in test contexts
  "N814",    # camelCase as constant alias - test doubles use arbitrary names
  "N817",    # CamelCase as acronym alias - test doubles use arbitrary names
  "UP042",   # StrEnum compatibility shim for Python 3.10
  "UP017",   # datetime.UTC compatibility shim for Python 3.10
  "PT012",   # pytest.raises complex statements - acceptable in integration tests
  "DTZ001",  # datetime() without tz - testing naive datetime handling
  "DTZ005",  # datetime.now without tz - acceptable in tests
  "E402",    # module level import not at top - needed for mocking before imports
  "N806",    # non-lowercase variable in function - mock objects use PascalCase
  "F841",    # unused variable - mock setup
  "SIM117",  # nested with statements - clearer in test setup
]
"test_*.py" = [
  "EXE001",  # shebang present - test files in root
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# ADR-0001 was reversed (2026-06-15): langgraph + langchain_core are re-adopted for the
# summarize-pipeline graph, installed via the optional `graph` extra. The kitchen-sink
# `langchain` monorepo and `langchain_community` stay banned (we use only the focused
# packages, and both are transitive-only via scrapegraphai); `langchain_openai` stays
# banned because structured output uses `instructor` (ADR-0006), not LangChain's client.
# See docs/decisions/0001-no-langgraph.md.
"langchain" = {msg = "Use the focused langgraph / langchain_core packages, not the langchain monorepo — see docs/decisions/0001-no-langgraph.md"}
"langchain_community" = {msg = "langchain_community is transitive-only (scrapegraphai); do not import it directly — see docs/decisions/0001-no-langgraph.md"}
"langchain_openai" = {msg = "Structured output uses instructor, not langchain-openai — see docs/decisions/0006-llm-structured-output-instructor.md"}

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = false
disallow_untyped_defs = false
disallow_any_generics = false
exclude = ["data", "build", "dist", "venv", "ratatoskr", "\\.claude"]
# Fix for _thread.RLock internal error
plugins = ["sqlalchemy.ext.mypy.plugin"]
strict_optional = false

[[tool.mypy.overrides]]
module = ["app.core.*", "app.domain.*", "app.models.*"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["app.api.*", "app.infrastructure.*", "app.security.*", "app.config.*"]
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["tests.test_telegram_retry_command"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.observability.test_taskiq_propagation"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["app.infrastructure.search.reranking_service"]
warn_unused_ignores = false

[project]
name = "ratatoskr"
version = "0.1.0"
description = "Telegram bot that summarizes URLs and forwarded posts via Firecrawl + OpenRouter"
requires-python = ">=3.13,<3.15"
# Core dependencies: Telegram bot, HTTP, database, NLP, logging
dependencies = [
  "httpx[http2]>=0.28.1",
  "telethon>=1.44.0,<2",
  # Markdown -> Telegram-HTML rendering for outgoing messages
  # (app/adapters/external/formatting/markdown_telegram.py).
  "markdown-it-py>=4.2.0,<5",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "pyyaml>=6.0.3",
  "scrapling>=0.4.9,<1",
  "msgspec>=0.21.1",
  "browserforge>=1.2.4",
  "curl_cffi>=0.15.0",
  "trafilatura>=2.1.0,<3",
  # jusText installs this transitively. Version 0.4.5 fixes XSS through unsanitized javascript: URLs in xlink:href attributes and requires the already-pinned lxml>=6.1.1.
  "lxml-html-clean>=0.4.5",
  # spacy: stays in base deps. The only usage is spacy.blank()+sentencizer in
  # app/core/html_utils.py:_get_spacy_sentencizer (deferred import, 1 call site).
  # The import is lazy but the runtime path is non-optional (sentence splitting
  # for HTML extraction). Replacing with a pure-Python splitter is possible but
  # out of scope; keeping the existing <4 upper bound.
  "spacy>=3.8.11,<4",
  "tldextract>=5.1.1",
  "json-repair>=0.61.0",
  "tenacity>=8.2.0",
  "openai>=2.44.0,<3",
  "instructor>=1.15.4,<2",
  "loguru>=0.7.3",
  "orjson>=3.11.9",
  "uvloop>=0.22.1",
  "redis>=8.0.0",
  "alembic>=1.18.5",
  "sqlalchemy[asyncio]>=2.0.51,<3.0",
  "asyncpg>=0.29",
  "greenlet>=3.5.2",
]

[project.optional-dependencies]
# Attachment processing: image handling + PDF extraction + office documents
attachment = [
  "Pillow>=11.0.0",
  "pymupdf>=1.28.0",
  "markitdown[docx,pptx,xlsx,outlook]>=0.1.5",
]

# Browser-based scraper fallback providers (Playwright + Crawlee)
# patchright is Scrapling's stealth Playwright backend (DynamicFetcher /
# StealthyFetcher); Scrapling lazy-imports it, so without this dep the
# stealth path fails with `ModuleNotFoundError: No module named 'patchright'`
# and the chain loses its anti-bot fallback on JS-heavy / Cloudflare sites.
browser_scraper = [
  "playwright>=1.60.0",
  "patchright>=1.60.1",
  "crawlee[beautifulsoup,playwright]>=1.7.3",
]

# LLM-driven last-resort scraper (lazy-imported; only fires when all other providers fail)
scraper_ai = [
  "scrapegraphai>=2.1.3,<3",
]

# Shared inference stack used by both api (semantic search) and ml (training/backfill)
inference_core = [
  "qdrant-client>=1.18.0,<2",
  "sentence-transformers>=5.6.0,<6",  # semantic embedding generation
]

# Mobile REST API dependencies (FastAPI, JWT auth, vector search client)
api = [
  "ratatoskr[inference_core]",
  "ratatoskr[browser_scraper]",
  # fastapi 0.136.3 is a confirmed malicious release that injects an
  # undocumented `fastar` typosquat dependency into the [standard] extras
  # group (osv.dev/MAL-2026-4750, published 2026-05-23). Exclude it; the
  # upstream registry has yanked it but the exclusion is defense in depth.
  "fastapi!=0.136.3,>=0.138.0,<1",
  "uvicorn[standard]>=0.49.0",
  "starlette>=1.3.1,<2",
  "sse-starlette>=3.4.5",
  "pyjwt>=2.13.0",
  "cryptography>=48.0.1",
  "python-multipart>=0.0.32",
  "defusedxml>=0.7.1",
  "argon2-cffi>=23.1.0",
]

# Machine learning dependencies (embeddings, vector search, transformers)
ml = [
  "ratatoskr[inference_core]",
  "torch>=2.12.1,<3",
  "transformers>=5.12.1,<6",
  "scikit-learn>=1.9.0",
]

# YouTube video download and transcript extraction
youtube = [
  "yt-dlp>=2026.6.9",
  "youtube-transcript-api>=1.2.4",
]

# CPU-only transcription via sherpa-onnx (Kroko streaming ASR + optional
# pyannote/reverb diarization). Off by default; enable with TRANSCRIPTION_ENABLED.
# Requires ffmpeg on PATH at runtime. Also relies on yt-dlp from the `youtube`
# extra when transcribing URL inputs through /transcribe.
transcription = [
  "sherpa-onnx>=1.10,<2",
]

# Twitter/X extraction (uses base runtime dependencies)
twitter = []

# PDF export functionality
export = [
  "weasyprint>=69.0,<70",
]

# Background task scheduling
scheduler = [
  "taskiq>=0.12.4,<0.13.0",
  "taskiq-redis>=1.0.0,<2.0.0",
]

# Gemini embedding provider (google-genai SDK)
gemini = [
  "google-genai>=2.9.0,<3",
]

# Push notifications (Firebase Cloud Messaging / APNS)
push = [
  "firebase-admin>=7.4.0,<8",
]

# Monitoring and observability
monitoring = [
  "prometheus_client>=0.25.0",
  "sentry-sdk[fastapi,loguru]>=2.63.0,<3",
]

# MCP (Model Context Protocol) server for AI agent integrations
mcp = [
  "mcp>=1.28.1,<2",
]

# OpenTelemetry distributed tracing (Tempo backend)
otel = [
  "opentelemetry-api>=1.43.0,<2",
  "opentelemetry-sdk>=1.42.1,<2",
  "opentelemetry-exporter-otlp-proto-grpc>=1.42.1,<2",
  "opentelemetry-instrumentation-fastapi>=0.64b0,<1",
  "opentelemetry-instrumentation-httpx>=0.63b1,<1",
  "opentelemetry-instrumentation-redis>=0.63b1,<1",
  "opentelemetry-instrumentation-logging>=0.63b1,<1",
]

# LangGraph summarize-pipeline orchestration + Postgres checkpointing (ADR-0001 reversed; ADR-0004).
# Optional and NOT installed by the default image — the runtime is unaffected until a deployment
# opts in. langgraph + langchain-core are already transitive (via scrapegraphai); this extra
# promotes them to direct deps and adds the checkpointer. psycopg[binary] is a direct dep here;
# psycopg-pool is new. langgraph-checkpoint-postgres floor is >=3:
# the 3.x line is the only one compatible with langgraph 1.x (it requires langgraph-checkpoint>=4.1.0).
# No langchain-openai (ADR-0006 keeps instructor) and no langchain-qdrant (reuse our Qdrant client).
graph = [
  "langgraph>=1.2.6,<2",
  "langchain-core>=1.4.8,<2",
  "langgraph-checkpoint-postgres>=3,<4",
  # Direct floor for the transitive checkpointer: 4.1.0 carries GHSA-fjqc-hq36-qh5p
  # (CVSS 6.8 Medium), fixed in 4.1.1. Still satisfies langgraph-checkpoint-postgres's >=4.1.0.
  "langgraph-checkpoint>=4.1.1,<5",
  "psycopg[binary]>=3.3.4",
  "psycopg-pool>=3.2",
]


# NOTE: spaCy trained models (en_core_web_sm, ru_core_news_sm) were removed because
# the codebase only uses spacy.blank() + sentencizer, which needs no trained models.
# Install them manually via `python -m spacy download <model>` if ever needed.

[dependency-groups]
ci-lint = [
    "import-linter>=2.8.0,<3",
    "isort>=7.0.0,<8",
    "radon>=6.0.1,<7",
    "ruff>=0.15.18",
]
ci-type = [
    "mypy>=2.1.0",
    "types-python-dateutil>=2.9.0.20250822",
    "types-PyYAML>=6.0.12.20250915",
]
ci-test = [
    # x_bookmarks ingestor imports aiosqlite unconditionally; pulled into dev so
    # tests/tasks/test_x_bookmarks_sync.py and the ingestor tests collect/run on
    # a fresh CI test environment without a dedicated project extra.
    "aiosqlite>=0.20.0",
    "coverage[toml]>=7.10.6",
    "fakeredis>=2.36.2",
    "hypothesis>=6.155.7",
    "openapi-spec-validator>=0.9.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-benchmark>=5.0.0",
    "pytest-cov>=7.0.0",
    "pytest-rerunfailures>=16.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "respx>=0.22.0",
    # app.tasks.* (digest scheduler etc.) imports taskiq unconditionally; the
    # `scheduler` extra is required to import those modules. Pulling the same
    # pins into CI tests so unit/integration tests under tests/tasks/, tests/observability/,
    # and tests/integration/test_channel_digest_scheduler.py collect on a
    # focused `uv sync` without needing `--extra scheduler`.
    "taskiq>=0.12.4,<0.13.0",
    "taskiq-redis>=1.0.0,<2.0.0",
]
ci-db = [
    { include-group = "ci-test" },
]
ci-security-tools = [
    "bandit>=1.7.9",
    "pip-audit>=2.10.1",
    "safety>=3.6.2,<4",
    "semgrep>=1.154.0,<2",
]
dev = [
    { include-group = "ci-lint" },
    { include-group = "ci-type" },
    { include-group = "ci-test" },
    "pre-commit>=4.5.1",
]

[tool.uv]
# Semgrep currently pins an older MCP SDK than Ratatoskr's MCP server. The
# security-tool environment never runs the application MCP extra, so declare
# that intentional environment split instead of weakening either constraint.
conflicts = [
  [
    { extra = "mcp" },
    { group = "ci-security-tools" },
  ],
  [
    { extra = "otel" },
    { group = "ci-security-tools" },
  ],
  [
    { group = "ci-test" },
    { group = "ci-security-tools" },
  ],
  [
    { group = "ci-db" },
    { group = "ci-security-tools" },
  ],
  [
    { group = "dev" },
    { group = "ci-security-tools" },
  ],
]

# Constrain torch's CUDA satellite deps to x86_64 Linux only.
#
# The torch 2.11.0 lockfile entry pins nvidia-* / triton / cuda-bindings /
# cuda-toolkit under marker `sys_platform == 'linux'` with no platform_machine
# qualifier, which makes uv attempt to install them on linux/arm64 too. The
# Pi (aarch64) has no NVIDIA GPU and the aarch64 torch wheel is CPU-only,
# so these are pure download bloat (~1.2 GB) and slow ARM image builds by
# 5-10 min. The overrides below mirror torch's marker but add
# `platform_machine == 'x86_64'`, so on aarch64 they evaluate False and uv
# skips the wheels entirely.
override-dependencies = [
  "langchain>=1.3.9",
  "langsmith>=0.8.18",
  "msgpack>=1.2.1",
  "protobuf>=7.34.1",
  "onnxruntime>=1.24.2",
  "pywin32>=312; sys_platform == 'win32'",
  "websockets>=16.0",
  "cuda-bindings; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "cuda-toolkit; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cublas; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cuda-cupti; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cuda-nvrtc; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cuda-runtime; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cudnn-cu13; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cufft; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-curand; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cusolver; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cusparse; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-cusparselt-cu13; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-nccl-cu13; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-nvjitlink; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "nvidia-nvshmem-cu13; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "triton; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "safety"
url = "https://pkgs.safetycli.com/repository/po4yka/project/ratatoskr/pypi/simple/"
default = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# The aarch64 (Raspberry Pi) torch wheel from the default index is a CUDA build
# that dlopens libcudart.so.13 / libcublasLt at import. Those CUDA satellites
# are x86_64-only (see the override-dependencies block above), so on the
# GPU-less Pi torch import fails with "libcudart.so.13 not found", which breaks
# sentence-transformers and the whole embedding/vector-index path. Pin aarch64
# Linux to the CPU-only wheel (150 MB vs 426 MB) from PyTorch's CPU index;
# x86_64 keeps the CUDA wheel from the default index.
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests that rely on pytest-asyncio",
    "chaos: marks chaos/fault-injection tests",
    "stress: marks stress/load tests",
    "benchmark: marks performance benchmark tests",
    "postgres: marks tests that require the live PostgreSQL service",
    "quarantined(issue, owner, expires): temporarily retries a known flaky test with mandatory tracking metadata and a bounded expiry",
    "flaky(reruns, reruns_delay): managed by the quarantine policy; do not apply directly",
    "contracts: marks API and schema contract consistency tests",
    "no_network: marks tests that must never perform live network I/O (enforced by the enforce_no_network fixture in tests/conftest.py, which blocks non-loopback socket connects)",
    "uses_real_yaml: opts out of the autouse stub that disables ratatoskr.yaml loading",
    "characterization: marks characterization/behavioral-spec tests ported from Kotlin",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/build/*",
    "*/dist/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
# Enforced floor for the CI unit coverage threshold: 65 % (the value below).
# The 80 % figure is an aspirational target, not the gate. Raise this value
# in a dedicated commit whenever a test expansion sprint pushes the real
# number up — never lower it.
fail_under = 65
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
